# ecoflow2nut-pibridge

./: .dockerignore  .gitignore  Dockerfile  LICENSE  NOTICE  README.fr.md  README.md  docker-compose.example.yml  docker-compose.yml  pyproject.toml
.github/workflows/: docker-build.yml  lint.yml
config/: config.example.yaml
docker/: entrypoint.sh
docs/: PROTOCOL.md
nut/: nut.conf  ups.conf  upsd.conf  upsd.users  upsmon.conf
src/ecoflow_nut/: __init__.py  autoshutdown.py  ble_client.py  cli.py  config.py  db.py  db_sqlite.py  delta3.py  eve_outlet.py  keydata.py  main.py  nut_writer.py  pricing.py  protocol.py  settings_store.py  switchbot.py  webapp.py
systemd/: ecoflow-nut-bridge.service  install.sh
tests/: test_autoshutdown.py  test_cli.py  test_config_web.py  test_crc.py  test_db.py  test_db_sqlite.py  test_eve_outlet.py  test_nut_writer.py  test_pricing.py  test_protocol.py  test_settings_store.py  test_switchbot.py  test_webapp.py
tests/data/: real_frames.txt
