[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ecoflow-nut-bridge"
version = "0.1.7"
description = "Expose an EcoFlow DELTA 3 portable power station as a standard NUT UPS over BLE."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "ecoflow-nut-bridge contributors" }]
keywords = ["ecoflow", "nut", "ups", "ble", "delta3"]
dependencies = [
    "bleak>=0.22",
    "bleak-retry-connector>=3.5",
    "pyyaml>=6.0",
    "structlog>=24.1",
    "click>=8.1",
    "pycryptodome>=3.20",
    "ecdsa>=0.19",
]

[project.optional-dependencies]
# Embedded control/telemetry web UI.
web = ["aiohttp>=3.9"]
# Optional Postgres telemetry logging.
postgres = ["asyncpg>=0.29"]
# Drive a downstream HomeKit-over-BLE outlet (e.g. Eve Energy) as a cut target.
eve = ["aiohomekit>=3.1"]
# Convenience: both optional server features.
server = ["aiohttp>=3.9", "asyncpg>=0.29"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "black>=24.0",
    "mypy>=1.10",
    "types-PyYAML>=6.0",
    "aiohttp>=3.9",
    "asyncpg>=0.29",
]

[project.scripts]
ecoflow-nut = "ecoflow_nut.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ecoflow_nut = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]

[tool.ruff]
line-length = 90
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]
ignore = ["B008"]  # click uses function calls in defaults

[tool.ruff.lint.per-file-ignores]
# webapp.py embeds a single-page HTML/CSS/JS dashboard as a string literal;
# its lines are not Python and need not wrap at the code line length.
"src/ecoflow_nut/webapp.py" = ["E501"]

[tool.black]
line-length = 90
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
files = ["src/ecoflow_nut"]
ignore_missing_imports = true
warn_unused_ignores = false
check_untyped_defs = true
disable_error_code = ["import-untyped"]
